# aij-2023-equal-ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  config_distillation.yaml  config_stage_1.yaml  config_x3d.yaml
scripts/: run.py
src/aij_2023_equal_ai/: callbacks.py  datasets.py  models.py  transforms.py
