[tool.poetry]
name = "aij-2023-equal-ai"
version = "0.1.0"
description = ""
authors = ["Konstantin Sukharev <k.sukharev@gmail.com>"]
readme = "README.md"
packages = [{include = "aij_2023_equal_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.3"
scikit-learn = "^1.3.1"
torch = {version = "2.1.0", source = "torch-cu118"}
torchvision = {version = "0.16.0", source = "torch-cu118"}
pytorchvideo = "^0.1.5"
lightning = "^2.1.0"
hydra-core = "^1.3.2"
lightning-bolts = "^0.7.0"
decord = "^0.6.0"
opencv-python-headless = "^4.8.1.78"
torchmetrics = "^1.2.0"


[tool.poetry.group.dev.dependencies]
notebook = "6.4.8"
traitlets = "5.9.0"
tensorboard = "^2.15.0"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.0"


[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
